--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         tools: composer
 
     - name: Install Composer dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest --no-interaction
+      run: rm composer.lock && composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
     - name: Create .env.test.local
       run: |
@@ -66,7 +66,7 @@ jobs:
         tools: phpstan
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest --no-interaction
+      run:  rm composer.lock && composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
     - name: Run static analysis
       run: vendor/bin/phpstan analyse
@@ -87,7 +87,7 @@ jobs:
         tools: phpunit
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest --no-interaction
+      run:  rm composer.lock && composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
     - name: Run unit tests
       run: vendor/bin/phpunit
