--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
       run:  rm composer.lock && composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
     - name: Run static analysis
-      run: vendor/bin/phpstan analyse
+      run: vendor/bin/phpstan analyse ./public/index.php
 
   run-unit-tests:
     runs-on: ubuntu-latest
@@ -103,7 +103,7 @@ jobs:
     - name: Install Symfony CLI
       run: |
         curl -sS https://get.symfony.com/cli/installer | bash
-        sudo mv /root/.symfony*/bin/symfony /usr/local/bin/symfony
+        sudo mv symfony /usr/local/bin/symfony
 
     - name: Run security analysis
       run: symfony check:security
